--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,10 @@
-- name: Ensure certs directory exists
-  file: state=directory path=/etc/pki/ca-trust/source/anchors/
+- name: Ensure directories exist
+  file: state=directory path={{ item }}
+  with_items:
+    - /etc/pki/ca-trust/source/anchors
+    - /etc/kubernetes/kubeconfigs
+    - /etc/kubernetes/pki
+    - /etc/systemd/system/docker.service.d 
 
 - name: Install proxy cert
   copy: src=files/webproxy.crt dest=/etc/pki/ca-trust/source/anchors/webproxy.crt
@@ -38,9 +43,6 @@
     - "docker-ce-{{ docker_version }}"
     - "kubernetes-cni-{{ cni_version }}"
     - "kubelet-{{ k8s_version }}"
-
-- name: Ensure docker dropin directory exists
-  file: path=/etc/systemd/system/docker.service.d state=directory
 
 - name: Docker proxy settings
   template: src=templates/docker-proxy.conf.j2 dest=/etc/systemd/system/docker.service.d/proxy.conf
