--- a/files/master-kubelet.service
+++ b/files/master-kubelet.service
@@ -3,7 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
-ExecStart=/usr/bin/kubelet --api-servers=http://127.0.0.1:8080 --allow-privileged=true --pod-manifest-path=/etc/kubernetes/manifests --v=2
+ExecStart=/usr/bin/kubelet --api-servers=http://127.0.0.1:8080 --allow-privileged=true --pod-manifest-path=/etc/kubernetes/manifests --v=2 --register-with-taints="node-role.kubernetes.io/master=true:NoSchedule"
 
 Restart=always
 StartLimitInterval=0
