--- a/files/worker-kubelet.service
+++ b/files/worker-kubelet.service
@@ -3,7 +3,7 @@ Description=kubelet: The Kubernetes Node Agent
 Documentation=http://kubernetes.io/docs/
 
 [Service]
-ExecStart=/usr/bin/kubelet --require-kubeconfig --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf
+ExecStart=/usr/bin/kubelet --anonymous-auth=false --client-ca-file=/etc/kubernetes/pki/ca.pem --require-kubeconfig --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf
 
 Restart=always
 StartLimitInterval=0
