--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -14,6 +14,17 @@
         name: Docker
         state: absent
     
+   
+    - name: Stop services
+      systemd:
+        name={{ item }}
+        state=stopped
+        enabled=no
+      with_items:
+        - kubelet
+        - docker
+      ignore_errors: yes
+
     - name: Remove required packages
       yum: name={{ item }} state=absent
       with_items:
@@ -56,15 +67,13 @@
   user: deployer
   become: yes
   tasks:
-  - name: Remove services
+  - name: Stop services
     systemd:
       name={{ item }}
       state=stopped
       enabled=no
     with_items:
       - kube-proxy
-      - kubelet
-      - docker
       - flannel
     ignore_errors: yes
 
