--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -55,3 +55,9 @@
     name=docker
     state=started
     enabled=yes
+
+- name: Disable puppet agent
+  shell: /bin/puppet agent --disable
+
+- name: Clean up /etc/hosts after puppet
+  shell: /bin/sed -i "s/$(/sbin/ifconfig docker0 | grep inet | awk '{print $2}')/$(/sbin/ifconfig $(ls /sys/class/net/ | grep en) | grep inet | awk '{print $2}')/g" /etc/hosts
