--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -36,6 +36,109 @@
       - sa.key
       - sa.pub
 
+
+  - name: Check if flannel config exists (OK if this fails)
+    shell: /usr/bin/etcdctl ls /nais/network/config
+    environment: 
+      - ETCDCTL_API: 2
+    register: flannelconfig
+    ignore_errors: yes
+
+  - name: Set flannel configuration in etcd
+    shell: '/usr/bin/etcdctl mkdir /nais/network && \
+           /usr/bin/etcdctl mk /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
+    environment: 
+      - ETCDCTL_API: 2
+    when: flannelconfig.rc != 0
+
+
+- hosts: all
+  user: deployer
+  become: yes
+  tasks:
+
+  - name: Download flannel binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
+    environment: "{{ proxy_env }}"
+    shell: curl -L --insecure https://github.com/coreos/flannel/releases/download/v{{flannel_version}}/flannel-v{{flannel_version}}-linux-amd64.tar.gz | \
+           tar xzf - -C /tmp flanneld mk-docker-opts.sh && \
+           mv /tmp/flanneld /usr/bin/flanneld-{{flannel_version}} && \
+           mv /tmp/mk-docker-opts.sh /usr/libexec
+    args:
+      creates: /usr/bin/flanneld-{{flannel_version}}
+
+  - name: Symlink flannel
+    file: src=/usr/bin/flanneld-{{flannel_version}} dest=/usr/bin/flanneld state=link
+
+  - name: Copy flannel service file
+    template: src=templates/flannel.service.j2 dest=/etc/systemd/system/flannel.service
+
+  - name: Enable flannel
+    systemd:
+      daemon_reload=yes
+      name=flannel
+      state=restarted
+      enabled=yes
+
+  - name: Make flannel configuration for docker
+    shell: rm -f /run/docker_opts.env && /usr/libexec/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /run/docker_opts.env
+
+  - name: Copy docker service file
+    copy: src=files/docker.service dest=/etc/systemd/system/docker.service
+    notify:
+      - restart_docker
+
+  - name: Start and enable docker
+    systemd:
+      daemon_reload=yes
+      name=docker
+      state=started
+      enabled=yes
+
+  - name: Download kube-proxy binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
+    environment: "{{ proxy_env }}"
+    shell: curl --insecure https://storage.googleapis.com/kubernetes-release/release/v{{ k8s_version }}/bin/linux/amd64/kube-proxy > /usr/bin/kube-proxy
+    args:
+      creates: /usr/bin/kube-proxy
+
+  - name: Make kube-proxy executable
+    file: path=/usr/bin/kube-proxy mode=0755
+
+  - name: Copy kube-proxy service file
+    template: src=templates/kube-proxy.service.j2 dest=/etc/systemd/system/kube-proxy.service
+    notify:
+      - restart_kubeproxy
+
+  - name: Copy kube-proxy kubeconfig
+    template: src=templates/kubeconfigs/kube-proxy.conf.j2 dest=/etc/kubernetes/kubeconfigs/kube-proxy.conf
+    notify: 
+      - restart_kubeproxy
+
+  - name: Enable kube-proxy
+    systemd:
+      daemon_reload=yes
+      name=kube-proxy
+      state=started
+      enabled=yes
+
+  handlers:
+    - name: restart_docker
+      systemd:
+        daemon_reload=yes
+        name=docker
+        state=restarted
+
+    - name: restart_kubeproxy
+      systemd:
+        daemon_reload=yes
+        name=kube-proxy
+        state=restarted
+
+# Start control plane
+- hosts: masters
+  user: deployer
+  become: yes
+  tasks:
+  
   - name: Copy kubelet service manifest
     copy: src=files/master-kubelet.service dest=/etc/systemd/system/kubelet.service
     notify: 
@@ -51,20 +154,6 @@
       name=kubelet
       state=started
       enabled=yes
-
-  - name: Check if flannel config exists (OK if this fails)
-    shell: /usr/bin/etcdctl ls /nais/network/config
-    environment: 
-      - ETCDCTL_API: 2
-    register: flannelconfig
-    ignore_errors: yes
-
-  - name: Set flannel configuration in etcd
-    shell: '/usr/bin/etcdctl mkdir /nais/network && \
-           /usr/bin/etcdctl mk /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
-    environment: 
-      - ETCDCTL_API: 2
-    when: flannelconfig.rc != 0
 
   - name: Ensure kubectl config directory exists on master
     file: state=directory path=/root/.kube
@@ -89,21 +178,18 @@
   - name: Ensure addons directory exists
     file: state=directory path=/etc/kubernetes/addons
 
-
   handlers:
     - name: restart_docker
       systemd:
-        daemon_reload=yes
         name=docker
+        daemon_reload=yes
         state=restarted
 
     - name: restart_kubelet
       systemd:
-        daemon_reload=yes
         name=kubelet
+        daemon_reload=yes
         state=restarted
-        enabled=yes
-
 
 # Configure workers
 - hosts: workers
@@ -138,69 +224,7 @@
       state=started
       enabled=yes
 
-  - name: Download kube-proxy binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
-    environment: "{{ proxy_env }}"
-    shell: curl --insecure https://storage.googleapis.com/kubernetes-release/release/v{{ k8s_version }}/bin/linux/amd64/kube-proxy > /usr/bin/kube-proxy
-    args:
-      creates: /usr/bin/kube-proxy
-
-  - name: Make kube-proxy executable
-    file: path=/usr/bin/kube-proxy mode=0755
-
-  - name: Copy kube-proxy service file
-    template: src=templates/kube-proxy.service.j2 dest=/etc/systemd/system/kube-proxy.service
-    notify:
-      - restart_kubeproxy
-
-  - name: Copy kube-proxy kubeconfig
-    template: src=templates/kubeconfigs/kube-proxy.conf.j2 dest=/etc/kubernetes/kubeconfigs/kube-proxy.conf
-    notify: 
-      - restart_kubeproxy
-
-  - name: Enable kube-proxy
-    systemd:
-      daemon_reload=yes
-      name=kube-proxy
-      state=started
-      enabled=yes
-
-  - name: Download flannel binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
-    environment: "{{ proxy_env }}"
-    shell: curl -L --insecure https://github.com/coreos/flannel/releases/download/v{{flannel_version}}/flannel-v{{flannel_version}}-linux-amd64.tar.gz | \
-           tar xzf - -C /tmp flanneld mk-docker-opts.sh && \
-           mv /tmp/flanneld /usr/bin/flanneld-{{flannel_version}} && \
-           mv /tmp/mk-docker-opts.sh /usr/libexec
-    args:
-      creates: /usr/bin/flanneld-{{flannel_version}}
-
-  - name: Symlink flannel
-    file: src=/usr/bin/flanneld-{{flannel_version}} dest=/usr/bin/flanneld state=link
-
-  - name: Copy flannel service file
-    template: src=templates/flannel.service.j2 dest=/etc/systemd/system/flannel.service
-
-  - name: Enable flannel
-    systemd:
-      daemon_reload=yes
-      name=flannel
-      state=restarted
-      enabled=yes
-
-  - name: Make flannel configuration for docker
-    shell: rm -f /run/docker_opts.env && /usr/libexec/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /run/docker_opts.env
-
-  - name: Copy docker service file
-    copy: src=files/docker.service dest=/etc/systemd/system/docker.service
-    notify:
-      - restart_docker
-
   handlers:
-    - name: restart_docker
-      systemd:
-        daemon_reload=yes
-        name=docker
-        state=restarted
-
     - name: restart_kubeproxy
       systemd:
         daemon_reload=yes
