--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -97,7 +97,7 @@
   - name: Enable IP forwarding
     iptables:
       chain: FORWARD
-      jump: ACCEPT
+      policy: ACCEPT
 
   - name: Download kube-proxy binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
     environment: "{{ proxy_env }}"
