--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -38,7 +38,9 @@
         - tiller-deploy    
       register: matches_spec
       failed_when: matches_spec.stdout != "1"
-      
+
+    - name: Ensure heapster works
+      shell: /usr/bin/kubectl top nodes
 
 - hosts: workers
   user: deployer
