--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -296,7 +296,7 @@
     file: state=directory path=/etc/sensu/plugins/nais/checks
 
   - name: Ensure sensu monitoring scripts exist
-    copy: src=files/checks/{{ item }} dest=/etc/sensu/plugins/nais/checks/{{ item }} mode=0775
+    copy: src=files/sensu/checks/{{ item }} dest=/etc/sensu/plugins/nais/checks/{{ item }} mode=0775
     with_items:
       - check-addon.sh
       - check-component.sh
@@ -312,7 +312,7 @@
 
   tasks:
   - name: Ensure sensu monitoring config for master node exists
-    copy: src=files/config/nais-master.json dest=/etc/sensu/conf.d/nais-master.json
+    copy: src=files/sensu/config/nais-master.json dest=/etc/sensu/conf.d/nais-master.json
     notify:
       - restart_sensu
 
@@ -322,7 +322,7 @@
 
   tasks:
   - name: Ensure sensu monitoring config for worker nodes exist
-    copy: src=files/config/nais-worker.json dest=/etc/sensu/conf.d/nais-worker.json
+    copy: src=files/sensu/config/nais-worker.json dest=/etc/sensu/conf.d/nais-worker.json
     notify:
       - restart_sensu
 
