Endret path for script og lagt til opprydding i teardown.

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -302,7 +302,7 @@
       - check-component.sh
       - check-interface.sh
       - check-nodes.sh
-      - ckeck-process.sh
+      - check-process.sh
     notify:
       - restart_sensu
 
