generates cluster-admin kubeconfig during setup

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -152,10 +152,6 @@
     notify: 
       - restart_kubelet
 
-  - name: Ensure kubectl is installed
-    environment: "{{ proxy_env }}"
-    yum: name=kubectl state=latest
-  
   - name: Enable kubelet
     systemd:
       daemon_reload=yes
@@ -163,6 +159,17 @@
       state=started
       enabled=yes
 
+  - name: Ensure kubectl is installed
+    environment: "{{ proxy_env }}"
+    yum: name=kubectl state=latest
+
+  - name: Generate cluster-admin kubeconfig
+    shell: rm -f /etc/kubernetes/kubeconfigs/cluster-admin.conf && 
+           /usr/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ master_ip }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           /usr/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/admin.pem --client-key=/etc/kubernetes/pki/admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           /usr/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           /usr/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf
+  
   - name: Ensure kubectl config directory exists on master
     file: state=directory path=/root/.kube
 
