--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -14,7 +14,6 @@
         name: Docker
         state: absent
     
-   
     - name: Stop services
       systemd:
         name={{ item }}
@@ -29,8 +28,6 @@
       yum: name={{ item }} state=absent
       with_items:
         - "docker-ce"
-        - "kubernetes-cni"
-        - "kubelet"
     
     - name: Remove files
       file: path={{ item }} state=absent
@@ -97,7 +94,9 @@
     file: path={{ item }} state=absent
     with_items:
       - /etc/systemd/system/kubelet.service
-      - /usr/bin/kube-proxy
+      - /usr/bin/kube-proxy*
+      - /usr/bin/kubelet*
+      - /usr/bin/kubectl*
       - /etc/systemd/system/kube-proxy.service
       - /usr/libexec/mk-docker-opts.sh
       - /usr/bin/flanneld
