fixed issue where signing pair gets regenerated and breaks cluster on simple rerun of playbook

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -38,7 +38,7 @@
 
 - name: Install required packages
   environment: "{{ proxy_env }}"
-  yum: name={{ item }} state=latest
+  yum: name={{ item }} state=present
   with_items:
     - "docker-ce-{{ docker_version }}"
 
