--- a/roles/fetch_existing_certificates/tasks/main.yml
+++ b/roles/fetch_existing_certificates/tasks/main.yml
@@ -59,3 +59,9 @@
     dest: target/pki/
     flat: yes
   when: sa.stat.exists
+
+- fetch:
+    src: /etc/kubernetes/pki/sa.pub
+    dest: target/pki/
+    flat: yes
+  when: sa.stat.exists
