make cluster-admin kubeconfig use full hostname to work OOTB for landscaper and from dev, proxy issue. Fixed flannel systemd config

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -75,7 +75,7 @@
     systemd:
       daemon_reload=yes
       name=flannel
-      state=restarted
+      state=started
       enabled=yes
 
   - name: Make flannel configuration for docker
@@ -177,7 +177,7 @@
 
   - name: Generate cluster-admin kubeconfig
     shell: rm -f /etc/kubernetes/kubeconfigs/cluster-admin.conf && 
-           /usr/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ master_ip }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           /usr/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups['masters'][0] }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/admin.pem --client-key=/etc/kubernetes/pki/admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf
