--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -328,6 +328,7 @@
       - interface-metrics.sh
       - nodes-metrics.sh
       - process-metrics.sh
+      - memory-metrics.sh
     notify:
       - restart_sensu
 
