compensate for diff in environments, puppet installed at /opt/puppet in preprod for some reason

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -47,3 +47,8 @@
 
 - name: Disable puppet agent
   shell: /bin/puppet agent --disable
+  ignore_errors: yes
+
+- name: Disable puppet agent (preprod)
+  shell: /opt/puppet/bin/puppet agent --disable
+  ignore_errors: yes
