Legger til "socat" (for port-forwarding mellom helm og tiller) som default-pakke, da denne mangler i preprod og prod

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -41,6 +41,7 @@
   yum: name={{ item }} state=present
   with_items:
     - "docker-ce-{{ docker_version }}"
+    - "socat"
 
 - name: Docker proxy settings
   template: src=templates/docker-proxy.conf.j2 dest=/etc/systemd/system/docker.service.d/proxy.conf
