--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -288,13 +288,13 @@
     wait_for: port=8080 host=127.0.0.1 delay=5
 
   - name: Create addons
-    shell: /usr/bin/kubectl create -f /etc/kubernetes/addons/{{ item }}
+    shell: /usr/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}
     with_items:
       - kubernetes-dashboard.yaml
       - core-dns.yaml
       - traefik.yaml
       - heapster.yaml
-    ignore_errors: yes
+    ignore_errors: no
   
   - name: Download helm binaries
     environment: "{{ proxy_env }}"
