--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -283,6 +283,7 @@
       - core-dns.yaml
       - traefik.yaml
       - heapster.yaml
+      - nais.yaml
 
   - name: Wait for API servver to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
@@ -294,6 +295,7 @@
       - core-dns.yaml
       - traefik.yaml
       - heapster.yaml
+      - nais.yaml
     ignore_errors: no
   
   - name: Download helm binaries
