--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -164,7 +164,7 @@
   tasks:
   
   - name: Copy kubelet service manifest
-    copy: src=files/master-kubelet.service dest=/etc/systemd/system/kubelet.service
+    template: src=templates/master-kubelet.service.j2 dest=/etc/systemd/system/kubelet.service
     notify: 
       - restart_kubelet
 
